2006-06-07  Sven Panne  <sven.panne@aedion.de>

	* admin/RPM/openal.spec.in: Spec updates for SuSE 10.1.

	* configure.ac: Bump version to 1.1.0. This is necessary for building an
	RPM on SuSE 10.1 via y2pmbuild, because the distro already ships a
	snapshot version 1.0.x. Any lower version would be ignored when
	e.g. building freealut.

2006-05-23  Sven Panne  <sven.panne@aedion.de>

	* src/al_ext.c: Extend the set of tokens recognized by alGetEnumValue a
	bit.
	
	* src/alc/alc_context.c: Faked device enumeration a bit. Announce
	ALC_ENUMERATION_EXT and ALC_EXT_CAPTURE extensions. Pretend that we are
	OpenAL 1.1, which is not fully correct yet.

2006-05-12  Sven Panne  <sven.panne@aedion.de>

	* src/al_state.c(alGetString): Following our recent change in the
	nomenclature, AL_RENDERER is now "OpenAL Sample Implementation".

	* src/al_state.c(alGetString): Fixed a bug found by valgrind: For the
	AL_EXTENSIONS query, the pointer returned was pointing to a local
	variable which was already dead. Using "static" is better, but still not
	perfect, because we are still limited to 1kB and the query is not
	thread-safe.

2006-04-23  Prakash Punnoor <prakash@punnoor.de>

	* CMakeLists.txt: move defines into config.h, fix disabled native output
	on Linux
	
	* admin/CMakeModules/FindCompilerVisibility.cmake:
	move define into config.h
	
	* src/arch/i386/mixaudio16_mmx_prk.c: optimize away one instruction for
	sign extension

2006-04-19  Sven Panne  <sven.panne@aedion.de>

	* src/al_bpool.h, src/al_buffer.h, src/al_config.h, src/al_cpu_caps.h,
	src/al_debug.h, src/al_distance.h, src/al_error.h, src/al_ext.h,
	src/al_filter.h, src/al_listen.h, src/al_main.h, src/al_matrix.h,
	src/al_mixer.h, src/al_mixfunc.h, src/al_mixmanager.h, src/al_mspool.c,
	src/al_mspool.h, src/al_mutexlib.c, src/al_mutexlib.h, src/al_queue.h,
	src/al_rctree.c, src/al_rctree.h, src/al_rcvar.h, src/al_siteconfig.h,
	src/al_source.h, src/al_spool.h, src/al_threadlib.c, src/al_threadlib.h,