@@ -6,9 +6,9 @@ PROJECT(OpenAL C)
 SET(PACKAGE "openal")
 SET(PACKAGE_TARNAME "openal")
 SET(PACKAGE_NAME "openal")
-SET(PACKAGE_MAJOR_VERSION "0")
-SET(PACKAGE_MINOR_VERSION "0")
-SET(PACKAGE_BUILD_VERSION "8")
+SET(PACKAGE_MAJOR_VERSION "1")
+SET(PACKAGE_MINOR_VERSION "1")
+SET(PACKAGE_BUILD_VERSION "0")
 SET(PACKAGE_VERSION "${PACKAGE_MAJOR_VERSION}.${PACKAGE_MINOR_VERSION}.${PACKAGE_BUILD_VERSION}")
 
 SET(SO_MAJOR_VERSION "1")
