@@ -1,3 +1,7 @@
+2006-06-07  Prakash Punnoor <prakash@punnoor.de>
+
+	* CMakeLists.txt: Bump version to 1.1.0.
+
 2006-06-07  Sven Panne  <sven.panne@aedion.de>
 
 	* admin/RPM/openal.spec.in: Spec updates for SuSE 10.1.
